# gMART

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  docker-compose-dev.yaml  docker-compose.actions.yaml  docker-compose.yaml  ollama_test.ipynb  pyproject.toml
.github/workflows/: build_and_deploy_agents.yaml  build_and_deploy_all.yaml  integration.yml  pr-autofill.yml  release.yml  tests.yml
docker/: Dockerfile-agents  Dockerfile-mcp
docker/dev/: Dockerfile-agents-dev  Dockerfile-mcp-dev
docs/: frontend-document-qa.md  frontend-norms-qa.md  frontend-service.md  frontend-urban-data-qa.md  gMART-API-DOCS.md
env/: .env.agents.example  .env.idu_mcp.example
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  MapPanel.tsx  api.ts  main.tsx  styles.css  types.ts
src/: __version__.py
src/agents/: __version__.py  agents_dev_runner.py  main.py
src/agents/a2a/: __init__.py  a2a_format.py  agent.py  dvd_agent.py  dvd_executor.py  executor.py  normgraph_agent.py  normgraph_executor.py  orchestrator_agent.py  orchestrator_executor.py  provision_agent.py  provision_executor.py  task_store.py  urban_data_agent.py  urban_data_executor.py
src/agents/dependencies/: dependencies.py  init_dependencies.py
src/agents/dto/: a2a_dto.py  auth_dto.py  dvd_request_dto.py  llm_request_dto.py  norms_request_dto.py  orchestrator_request_dto.py  provision_request_dto.py  restriction_request_dto.py  urban_data_request_dto.py
src/agents/mcp_clients/: base_mcp_client.py  dvd_mcp_client.py  effects_mcp_client.py  idu_mcp_client.py  normgraph_mcp_client.py  provision_mcp_client.py  urban_data_mcp_client.py
src/agents/model_clients/: base_client.py
src/agents/routers/: a2a_controller.py  auth_controller.py  chat_history_controller.py  dvd_a2a_controller.py  dvd_controller.py  norms_a2a_controller.py  norms_controller.py  orchestrator_controller.py  provision_a2a_controller.py  provision_controller.py  restriction_parser_controller.py  simple_llm_controller.py  system_controller.py  token_refresh_controller.py  urban_data_a2a_controller.py  urban_data_controller.py
src/agents/schema/: app_config_request.py  app_config_response.py  chunk_llm_response.py  dvd_response.py  norms_response.py  orchestrator_response.py  provision_response.py  urban_data_response.py  (+1 more)
src/idu_mcp/: __version__.py  main.py  mcp_dev_runner.py
tests/: conftest.py  helpers.py
tests/integration/: conftest.py  test_a2a_restriction_endpoint.py  test_a2a_sdk_validation.py  test_ollama_model_not_found.py  test_qa_live.py  test_reconnect_redis.py
tests/unit/: test_a2a_no_history_persistence.py  test_a2a_spec_compliance.py  test_auth_controller.py  test_build_llm_history.py  test_chat_storage_responses.py  test_chat_title_model_not_found.py  test_dvd_a2a.py  test_dvd_context.py  test_dvd_mcp_client.py  test_dvd_rag_service.py  test_dvd_reasoning.py  test_dvd_response_schema.py  test_dvd_routers.py  test_idu_mcp_json_api_handler.py  test_json_api_handler.py  test_normgraph_mcp_client.py  test_orchestrator_catalog.py  test_orchestrator_no_history_persistence.py  test_orchestrator_plan_builder.py  test_orchestrator_service_events.py  test_provision_context.py  test_provision_plan.py  test_provision_service_events.py  test_urban_data_a2a.py  test_urban_data_mcp_client.py  test_urban_data_qa_service.py
tools/test-ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
(+93 files in other folders)
