[project]
name = "gMART"
version = "0.12.0"
description = "First look on fastmcp with uv"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "aiohttp>=3.14.1",
    "dotenv>=0.9.9",
    "fastapi>=0.138.1",
    "fastmcp>=3.4.2",
    "geojson-pydantic>=2.1.1",
    "geopandas>=1.1.3",
    "loguru>=0.7.3",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "python-a2a>=0.5.10",
    "redis>=7.4.0",
    "uvicorn>=0.49.0",
    "pydantic>=2.13.4",
    "fastmcp-docs>=1.0.0",
    "starlette>=1.3.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
    "branca (>=0.8.2,<0.9.0)",
    "folium (>=0.12)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "mapclassify (>=2.10.0,<3.0.0)",
    "pre-commit>=4.6.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "fakeredis>=2.26.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: tests that require the live local stack (Ollama, Redis, IDU_DVD MCP); skipped automatically when a service is unavailable",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
