[project]
name = "gMART"
version = "0.14.1"
description = "First look on fastmcp with uv"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "aiohttp>=3.14.1",
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "fastmcp>=3.4.4",
    "geojson-pydantic>=2.1.1",
    "geopandas>=1.1.4",
    "loguru>=0.7.3",
    "ollama>=0.6.2",
    "pandas>=3.0.4",
    "python-a2a>=0.5.10",
    "redis>=8.0.1",
    "uvicorn>=0.51.0",
    "pydantic>=2.13.4",
    "fastmcp-docs>=1.0.0",
    "starlette>=1.3.1",
    "anyio>=4.14.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
    "branca (>=0.8.2,<0.9.0)",
    "folium (>=0.12)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "mapclassify (>=2.10.0,<3.0.0)",
    "pre-commit>=4.6.0",
    "commitizen>=4.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "fakeredis>=2.26.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: tests that require the live local stack (Ollama, Redis, IDU_DVD MCP); skipped automatically when a service is unavailable",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.14.1"
tag_format = "v$version"
version_scheme = "pep440"
major_version_zero = true
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:^version",
    "src/__version__.py:__VERSION__",
]
